[package]
name = "strava-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.195", features = ["derive"] }
